--- a/RunOTABinary/pyproject.toml
+++ b/RunOTABinary/pyproject.toml
@@ -16,3 +16,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 agent = "runotabinary.run_binary:main"
+build = "runotabinary.build_binary:main"
