--- a/RunOTABinary/pyproject.toml
+++ b/RunOTABinary/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Shubham Divekar <divekarshubham@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.6.2"
 boto3 = "^1.14.40"
+paho-mqtt = "^1.5.0"
+pyOpenSSL = "^19.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -19,3 +21,4 @@ build-backend = "poetry.core.masonry.api"
 agent = "runotabinary.run_binary:main"
 build = "runotabinary.build_binary:main"
 update = "runotabinary.create_update:main"
+interrupt = "runotabinary.interrupt_mqtt:main"
