--- a/RunOTABinary/pyproject.toml
+++ b/RunOTABinary/pyproject.toml
@@ -22,3 +22,4 @@ agent = "runotabinary.run_binary:main"
 build = "runotabinary.build_binary:main"
 update = "runotabinary.create_update:main"
 interrupt = "runotabinary.interrupt_mqtt:main"
+canary = "runotabinary.canary:main"
